<resources>
    <string name="app_name">Catalogue Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="search">Search</string>
    <string name="trending_movies_now">Trending Movies Now</string>
    <string name="trending_tv_now">Trending TV Shows Now</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="most_popular_tv_shows">Most Popular TV Shows</string>
    <string name="new1">New</string>
    <string name="share">Share</string>
    <string name="source">Source: www.themoviedb.org</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="search_movie">search for a movie</string>
    <string name="message_not_found">Oh darn, We do not have that. :(</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
</resources>